results/SpecGenBench/4-shot/log-CalcComplement-2023_11_04_23_37_34.txt
class CalcComplement {
    //@ requires Integer.MIN_VALUE <= num && num <= Integer.MAX_VALUE;
    //@ ensures \result == (~num) & ((1 << (\result + 1)) - 1);
    public int calcComplement(int num) {
        int highbit = 0;
        //@ maintaining 0 <= i && i <= 30;
        //@ maintaining (\forall int j; 1 <= j && j < i; num >= 1 << j);
        //@ decreases 30 - i;
        for (int i = 1; i <= 30; ++i) {
            if (num >= 1 << i) {
                highbit = i;
            } else {
                break;
            }            
        }
        int mask = highbit == 30 ? 0x7fffffff : (1 << (highbit + 1)) - 1;
        return num ^ mask;
    }
}
/home/max/Documents/JMLGPT/tmp/CalcComplement.java:3: error: bad operand types for binary operator '&'
    //@ ensures \result == (~num) & ((1 << (\result + 1)) - 1);
                                  ^
  first type:  boolean
  second type: int
1 error

